MAJOR - add username as JWT sub, migrate to DTO usage in controllers